--- a/Code/index.html
+++ b/Code/index.html
@@ -1,11 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hospital-website</title>
+    <!-- font awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- google font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Poppins:wght@200&family=Roboto:wght@300&display=swap"
+        rel="stylesheet">
+
+    <!-- External style sheet -->
+    <link rel="stylesheet" href="index.css">
+
+
+
 </head>
+
 <body>
-    
+    <header>
+        <nav id="nav-bar">
+            <div id="nav-bar-logo-icons">
+                <i class="fa-solid fa-hospital"></i>
+                <span>Hospital</span>
+            </div>
+            <ul>
+                <i class="fa-solid fa-house"></i>
+                <li><a href="#"></a>About</li>
+                <li><a href="#"></a>Services</li>
+                <li><a href="#"></a>Gallery</li>
+                <li><a href="#"></a>Contact</li>
+
+            </ul>
+            <div id="social-media-icons">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-linkedin-in"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-twitter"></i>
+
+
+            </div>
+
+
+        </nav>
+    </header>
+    <main>
+        <section id="header-content-section">
+            <div id="header-content-section01">
+                <h1 id="header-content-section01-h1">
+                    Lorem ipsum dolor sit amet consectetur.
+                </h1>
+                <p id="header-content-section01-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti eaque cupiditate soluta, iste perferendis labore eius.</p>
+                <div id="header-content-section-icons">
+                    <i class="fa-solid fa-heart-pulse"></i>
+                    <i class="fa-solid fa-briefcase-medical"></i>
+                    <i class="fa-solid fa-stethoscope"></i>
+
+                </div>
+            </div>
+
+        </section>
+        <section id="">
+
+        </section>
+
+    </main>
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
