--- a/Code/index.html
+++ b/Code/index.html
@@ -27,7 +27,7 @@
     <header>
         <nav id="nav-bar">
             <div id="nav-bar-logo-icons">
-                <i class="fa-solid fa-hospital"></i>
+                <i class="fa-solid fa-circle-h"></i>
                 <span>Hospital</span>
             </div>
             <ul>
@@ -66,7 +66,58 @@
             </div>
 
         </section>
-        <section id="">
+        <section id="header-after-contact">
+            <div id="header-after-contact-01">
+                <i class="fa-solid fa-phone"></i>
+
+                <h1 id="header-after-contact-h1">
+                    Emergency Service
+
+                </h1>
+                <p id="header-after-contact-para">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime voluptatem sunt odit dolor quisquam sit blanditiis harum, dolore illum quo.
+
+                </p>
+                <button id="header-after-contact-btn">
+                    Call Now
+
+                </button>
+
+
+
+            </div>
+            <div id="header-after-contact-02">
+                <i class="fa-solid fa-calendar-days"></i>
+                <h1 id="header-after-contact-h1">
+                    Book An Appointment
+
+                </h1>
+                <p id="header-after-contact-para">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime voluptatem sunt odit dolor quisquam sit blanditiis harum, dolore illum quo.
+
+                </p>
+                <button id="header-after-contact-btn">
+                    Book Now
+
+                </button>
+
+            </div>
+            <div id="header-after-contact-03">
+                <i class="fa-solid fa-clock"></i>
+                <h1 id="header-after-contact-h1">
+                    Opening Hours
+
+                </h1>
+                <p id="header-after-contact-para">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime voluptatem sunt odit dolor quisquam sit blanditiis harum, dolore illum quo.
+
+                </p>
+                <button id="header-after-contact-btn">
+                    Call Now
+
+                </button>
+
+            </div>
 
         </section>
 
