website fully responsive

--- a/Code/index.html
+++ b/Code/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav id="nav-bar">
             <div id="nav-bar-logo-icons">
                 <i class="fa-solid fa-circle-h"></i>
@@ -49,6 +49,11 @@
                 <i class="fa-brands fa-twitter"></i>
 
 
+            </div>
+
+            <div class="mobile-navbar-btn">
+                <i class="fa-solid fa-bars moblie-navbar-icon" ></i>
+                <i class="fa-solid fa-xmark moblie-navbar-icon"></i>
             </div>
 
 
@@ -298,7 +303,8 @@
                 <h3 id="footer-subcontainer01-h3">Contact me</h3>
                 <div id="footer-subcontainer01-c1">
                 <i class="fa-solid fa-house-chimney-medical"></i>
-                <span>City,Mysore</span>
+                &nbsp;
+                <span> City,Mysore</span>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam, temporibus.</p>
                 </div>
                 
@@ -323,6 +329,7 @@
 
 
             </div>
+            <div id="footer-mobile-res">
             <div id="footer-subcontainer02">
                 <ul>
                     <li><a href="#">Services</a></li>
@@ -340,6 +347,7 @@
     
                 </ul>
 
+            </div>
             </div>
         </div>
         <div id="footer-main-container02">
