--- a/Code/index.html
+++ b/Code/index.html
@@ -32,6 +32,7 @@
         <nav id="nav-bar">
             <div id="nav-bar-logo-icons">
                 <i class="fa-solid fa-circle-h"></i>
+                &nbsp;
                 <span>Hospital</span>
             </div>
             <ul>
