final empty commit

--- a/Code/index.html
+++ b/Code/index.html
@@ -141,7 +141,7 @@
         <section id="AboutUs-section">
             <div id="AboutUs-section-main-containter">
                 <div id="AboutUs-section-m-containter01">
-                    <img id="AboutUs-section-m-containter01-img" src="\Assets\\About-image.png" alt="">
+                    <img id="AboutUs-section-m-containter01-img" src="\Code\About-image.png" alt="">
 
                 </div>
                 <div id="AboutUs-section-m-containter02">
@@ -263,18 +263,18 @@
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide ">
-                            <img src="\Assets\\Gallery-image01.jpg" alt="">
+                            <img src="\Code\Gallery-image01.jpg" alt="">
                         </div>
                         <div class="swiper-slide">
-                            <img src="\Assets\\Gallery-image02.jpg" alt="">
+                            <img src="\Code\Gallery-image02.jpg" alt="">
                             
 
                         </div>
                         <div class="swiper-slide">
-                            <img src="\Assets\\Gallery-image03.jpg" alt="">
+                            <img src="\Code\Gallery-image03.jpg" alt="">
                         </div>
                         <div class="swiper-slide">
-                            <img src="\Assets\\Gallery-image04.jpg" alt="">
+                            <img src="\Code\Gallery-image04.jpg" alt="">
                         </div>
 
 
